# cdr-encoding

./: Cargo.toml  README.md
cdr-encoding-size/: Cargo.toml  README.md
cdr-encoding-size-derive/: Cargo.toml  README.md
cdr-encoding-size-derive/src/: lib.rs
cdr-encoding-size/src/: lib.rs
src/: cdr_deserializer.rs  cdr_serializer.rs  error.rs  lib.rs
