[package]
name = "cdr-encoding"
version = "0.10.1"
edition = "2018"
authors = ["Juhana Helovuo <juhana.helovuo@atostek.com>"]
description = "Serde implementation of OMG Common Data Representation (CDR) encoding"
readme = "README.md"
keywords = ["network","protocol","dds","rtps"]
license = "Apache-2.0"
homepage = "https://atostek.com/en/products/rustdds/"  
repository = "https://github.com/jhelovuo/cdr-encoding"

[workspace]
resolver = "2"
members = [
    ".",
    "cdr-encoding-size",
    "cdr-encoding-size-derive",
]


# Although cdr-encoding, cdr-encoding-size, and cdr-encoding-size-derive 
# are relaed semantically,
# the main crate cdr-encoding does not technically depend on the two others.
#
# Naturally, cdr-encoding-size does depend on cdr-encoding-size-derive.
#
# These are intended for use in the RustDDS crate, which does depend on all of them.

[dependencies]
log = "0.4.11"
serde = { version = "1.0", features = ["derive"] }
serde_repr="0.1"
byteorder = { version = "1.3", features = ["i128"] }
paste = "1"
thiserror = "1.0.29"
static_assertions = "1.1"

[dev-dependencies]
test-case = "3.1.0"
