[package]
name = "cdr-encoding-size-derive"
version = "0.5.1"
edition = "2018"
authors = ["Juhana Helovuo <juhe@iki.fi>"]
repository = "https://github.com/jhelovuo/cdr-encoding"
description = "Helper crate for RustDDS: Trait to compute the maximum CDR-serialized size of data (derive macro)"
readme = "README.md"
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = "1.0"
quote = "1.0"

